--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@react-three/drei": "latest",
-    "@react-three/fiber": "latest",
+    "@react-three/drei": "^10.5.0",
+    "@react-three/fiber": "^9.2.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,14 +59,15 @@
     "react-day-picker": "latest",
     "react-dom": "^18",
     "react-hook-form": "latest",
-    "react-intersection-observer": "latest",
+    "react-intersection-observer": "^9.16.0",
     "react-native": "latest",
     "react-resizable-panels": "latest",
     "recharts": "latest",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "latest",
+    "three": "^0.178.0",
+    "vanta": "^0.5.24",
     "vaul": "latest",
     "zod": "^3.24.1"
   },
