--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
+    "pnpm": "^10.13.1",
     "react": "^18",
     "react-day-picker": "latest",
     "react-dom": "^18",
