--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "next": "14.2.16",
     "next-themes": "latest",
     "pnpm": "^10.13.1",
-    "react": "^18.3.1",
+    "react": "^19.0.0-rc.1",
     "react-day-picker": "latest",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "latest",
     "react-intersection-observer": "^9.16.0",
     "react-native": "latest",
