--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@react-three/drei": "^10.5.0",
-    "@react-three/fiber": "^9.2.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -55,10 +53,11 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
-    "pnpm": "^10.13.1",
-    "react": "^19.0.0-rc.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "@react-three/fiber": "^8.13.6",
+    "@react-three/drei": "^9.77.1",
     "react-day-picker": "latest",
-    "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "latest",
     "react-intersection-observer": "^9.16.0",
     "react-native": "latest",
