--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "react-day-picker": "latest",
     "react-hook-form": "latest",
     "react-intersection-observer": "^9.16.0",
-    "react-native": "latest",
+    "react-native": "0.73.9",
     "react-resizable-panels": "latest",
     "recharts": "latest",
     "sonner": "latest",
@@ -73,7 +73,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "^18.3.23",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.3.7",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
