--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
-    "react": "^18.3.1",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@react-three/fiber": "^8.13.6",
     "@react-three/drei": "^9.77.1",
     "react-day-picker": "latest",
